--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
         <item name="windowSplashScreenAnimatedIcon">@mipmap/bootsplash_logo</item>
         <item name="postSplashScreenTheme">@style/AppTheme</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:icon">@mipmap/ic_launcher_round</item>
+        <item name="icon">@mipmap/ic_launcher_round</item>
   </style>
 
 </resources>
